[gd_scene load_steps=3 format=3 uid="uid://cb5a76eqw42fw"]

[ext_resource type="Script" path="res://Scripts/cutscene_start.gd" id="1_fipmb"]
[ext_resource type="VideoStream" path="res://Resources/Video/gga.ogv" id="2_sypse"]

[node name="CutsceneStart" type="Node2D"]
script = ExtResource("1_fipmb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1954.0
offset_bottom = 1113.0
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1088.0
stream = ExtResource("2_sypse")

[node name="EndSprite" type="Sprite2D" parent="."]
position = Vector2(960, 540)

[node name="Button" type="Button" parent="."]
offset_left = 1534.0
offset_top = 1014.0
offset_right = 1922.0
offset_bottom = 1082.0
text = "Next"

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_finished"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
